Fix menu text alignment

--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -101,6 +101,7 @@
 
 .menu-details {
   font-size: 0.8em;
+  padding: 0 0.5em;
 }
 
 .menu-section-end {
